--- a/themes/layouts/partials/footer.html
+++ b/themes/layouts/partials/footer.html
@@ -1,4 +1,5 @@
 <footer class="footer" data-background-color="black">
+ <span style="height:22px,width:100%;background-color: black;-index:555;"  class="footimg"></span>
   <div class="container">
     <nav>
 	    <ul>
