--- a/static/css/nedgreenhouse.css
+++ b/static/css/nedgreenhouse.css
@@ -89,7 +89,7 @@
     background-position: center center;
     background-size: cover;
     margin-top: 0;
-    min-height: 740px;
+    min-height: 440px;
     height: 100%;
 }
 
@@ -113,6 +113,10 @@
     height: 100px;
     display: block;
     width: 100%;
+}
+
+.footer { 
+    background-image: url('/img/pics/veggie_footer_color_stripe_added.jpg'); 
 }
 
 .be-social {
