--- a/themes/layouts/partials/head.html
+++ b/themes/layouts/partials/head.html
@@ -11,7 +11,7 @@
     <!-- CSS Files -->
     <link href="{{ "css/bootstrap.min.css" | relURL }}" rel="stylesheet" />
     <link href="{{ "css/now-ui-kit.css?v=1.1.0" | relURL }}" rel="stylesheet" />
-    <link href="{{ "css/demo.css" | relURL }}" rel="stylesheet" />
+    <link href="{{ "css/nedgreenhouse.css" | relURL }}" rel="stylesheet" />
     
   {{ range .Site.Params.custom_css -}}
     <link rel="stylesheet" href="{{ . | absURL }}">
