--- a/themes/layouts/index.html
+++ b/themes/layouts/index.html
@@ -10,6 +10,7 @@
       <div class="homepage-content">
         <!-- Note that the content for index.html, as a sort of list page, will pull from content/_index.md -->
         {{.Content}}
+          {{ partial "homeopage_content.html . "}}
       </div>
       <div>
         <!-- Note that .Pages is the same as .Site.RegularPages on the homepage template. -->
