--- a/themes/layouts/index.html
+++ b/themes/layouts/index.html
@@ -9,8 +9,8 @@
       </header>
       <div class="homepage-content">
         <!-- Note that the content for index.html, as a sort of list page, will pull from content/_index.md -->
-        {{.Content}}
-          {{ partial "homeopage_content.html . "}}
+
+          {{ partial "homepagecontent.html . "}}
       </div>
       <div>
         <!-- Note that .Pages is the same as .Site.RegularPages on the homepage template. -->
