--- a/themes/layouts/partials/javascript.html
+++ b/themes/layouts/partials/javascript.html
@@ -13,7 +13,7 @@
 <script type="text/javascript">
     $(document).ready(function() {
         // the body of this function is in assets/js/now-ui-kit.js
-        nowuiKit.initSliders();
+        // nowuiKit.initSliders();
     });
 
     function scrollToDownload() {
